k8s/csk.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csk
  template:
    metadata:
      labels:
        app: csk
    spec:
      containers:
      - name: csk
        image: docker.io/mfk267/gsd:csk2024
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: csk
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: csk
