k8s/kkr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kkr  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kkr
  template:
    metadata:
      labels:
        app: kkr
    spec:
      containers:
      - name: kkr
        image: docker.io/mfk267/gsd:kkr2024
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kkr  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: kkr
