k8s/srh.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srh
  labels:
    app: srh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srh
  template:
    metadata:
      labels:
        app: srh
    spec:
      containers:
      - name: microservice-container
        image: docker.io/mfk267/gsd:srh2024
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: srh
spec:
  type: ClusterIP
  selector:
    app: srh
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
