k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /kkr(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kkr
            port:
              number: 80
      - path: /srh(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: srh
            port:
              number: 80
      - path: /csk(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: csk
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: kkr
            port:
              number: 80
